fix: Replace List.of with Collections.singletonList for student names assignment