@@ -9,6 +9,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.List;
+import java.util.Collections;
 
 @Service
 public class StudentOperationService {
@@ -43,7 +44,7 @@ public class StudentOperationService {
         StudentAliasDTO alias = new StudentAliasDTO();
         alias.setCoachId(coachId);
         alias.setAliasName(request.getAliasName());
-        alias.setStudentNames(List.of(request.getOldName()));
+        alias.setStudentNames(Collections.singletonList(request.getOldName()));
         
         Long id = studentAliasRepository.save(alias);
         alias.setId(id);
